# stwgs

./: .gitignore  Cargo.toml  LICENSE  README.md  layer.json  test-overlay.sh
examples/: gta-sa.cfg  menus.cfg  ut99.cfg  xpad-ut99.cfg
mapper/: Cargo.toml
mapper/src/: main.rs  mapper.rs
mapper/src/config/: ast.rs  eval.rs  grammar.pest  mod.rs  parser.rs  util.rs
mapper/src/controllers/: mod.rs  sdlgc.rs  steam.rs
mapper/src/output/: evdev.rs  mod.rs  uinput.rs  xcb.rs
mapper/src/stages/: actions.rs  as_axis_input.rs  cartesian.rs  cutoff.rs  deadzone.rs  distance_from_center.rs  gate.rs  input.rs  invert.rs  line_segment_button.rs  menu_item.rs  merge.rs  mod.rs  mode_is.rs  offset.rs  polar.rs  press_types.rs  pulse.rs  relative.rs  ring_sector_button.rs  rotate.rs  scale.rs  select.rs  smooth.rs  touch_menu.rs  twitch_joymouse.rs
overlay/: Cargo.toml
overlay-ipc/: Cargo.toml
overlay-ipc/src/: lib.rs
overlay/src/: definitions.rs  gui.rs  lib.rs  pixelcount.wgsl  shaders.rs  wasm.rs  wgpu_util.rs
overlay/src/shaders/: clusters.wgsl  hsv.wgsl  pixelcount.wgsl  vlinecount.wgsl
probes/: Cargo.toml
probes/.cargo/: config.toml
probes/src/: lib.rs
