[package]
name = "mapper"
version = "0.1.0"
authors = ["Alex S"]
edition = "2021"

[dependencies]
clap         = { version = "4.1.8", features = ["derive"] }
evdev        = { version = "0.12.1", optional = true }
lazy_static  = "1.0.0"
libusb       = "0.3"
pest         = "2.5.5"
pest_derive  = "2.5.5"
rand         = "0.4"
sdl2         = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "550f3f8f62c8c7c8ac65db30efabec6d121a36f4", optional = true }
serde_json   = "1.0.91"
strum        = "0.24.1"
strum_macros = "0.24.1"
x11          = { version = "2.21.0", optional = true }
xcb          = { version = "1.2.0", features = ["xtest"], optional = true }

[dependencies.overlay-ipc]
package = "overlay-ipc"
path = "../overlay-ipc"

[features]
default = ["evdev", "sdl", "x11"]
evdev   = ["dep:evdev"]
sdl     = ["dep:sdl2"]
x11     = ["dep:x11", "dep:xcb"]
