[package]
name = "mapper"
version = "0.1.0"
authors = ["Alex S"]
edition = "2021"

[dependencies]
clap         = { version = "4.2.4", features = ["derive"] }
evdev        = { version = "0.12.1", optional = true }
lazy_static  = "1.4.0"
libusb       = "0.3"
pest         = "2.5.7"
pest_derive  = "2.5.7"
rand         = "0.8.5"
serde_json   = "1.0.96"
strum        = "0.24.1"
strum_macros = "0.24.1"
x11          = { version = "2.21.0", optional = true }
xcb          = { version = "1.2.0", features = ["xtest"], optional = true }

[dependencies.sdl2]
git      = "https://github.com/Rust-SDL2/rust-sdl2.git"
rev      = "2848a5443140e3f412a855e8b78e20f8e7fa2d00"
optional = true
features = ["hidapi"]

[dependencies.overlay-ipc]
package = "overlay-ipc"
path = "../overlay-ipc"

[features]
default = ["evdev", "sdl", "x11"]
evdev   = ["dep:evdev"]
sdl     = ["dep:sdl2"]
x11     = ["dep:x11", "dep:xcb"]
