[package]
name = "mapper"
version = "0.1.0"
authors = ["Alex S"]
edition = "2021"

[dependencies]
clap         = { version = "4.5.7", features = ["derive"] }
evdev        = { version = "0.12.2", optional = true }
lazy_static  = "1.4.0"
libusb       = "0.3"
pest         = "2.7.10"
pest_derive  = "2.7.10"
rand         = "0.8.5"
sdl2         = { version = "0.36.0", features = ["hidapi"], optional = true }
serde_json   = "1.0.117"
strum        = "0.26.2"
strum_macros = "0.26.4"
x11          = { version = "2.21.0", optional = true }
xcb          = { version = "1.4.0", features = ["xtest"], optional = true }

[dependencies.overlay-ipc]
package = "overlay-ipc"
path = "../overlay-ipc"

[features]
default = ["evdev", "sdl", "x11"]
evdev   = ["dep:evdev"]
sdl     = ["dep:sdl2"]
x11     = ["dep:x11", "dep:xcb"]
