[package]
name = "overlay"
version = "0.1.0"
authors = ["Alex S"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ash               = "=0.37.0" # version required by wgpu-hal
bytemuck          = "1.9.1"
egui              = "=0.19.0" # version required by egui-wgpu
egui-wgpu         = "0.19.0"
futures           = "0.3"
lazy_static       = "1.4.0"
libc              = "0.2.126"
raw-window-handle = "0.4.3"

[dependencies.wgpu]
version  = "=0.13.1"
features = ["spirv"]

[dependencies.wgpu-hal]
version  = "=0.13.0"
features = ["vulkan"]

[dependencies.overlay-ipc]
package = "overlay-ipc"
path = "../overlay-ipc"
