[package]
name = "overlay"
version = "0.1.0"
authors = ["Alex S"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ash               = "=0.37.3" # version required by wgpu-hal
bytemuck          = "1.16.0"
egui              = "=0.27.2" # version required by egui-wgpu
egui-wgpu         = "0.27.2"
futures           = "0.3.30"
lazy_static       = "1.4.0"
libc              = "0.2.155"
#proc-maps         = "0.3.2"
raw-window-handle = "0.6.2"
wasmtime          = "21.0.1"

[dependencies.wgpu]
version  = "=0.19.1"
features = ["spirv"]

[dependencies.wgpu-hal]
version  = "=0.19.1"
features = ["vulkan"]

[dependencies.overlay-ipc]
package = "overlay-ipc"
path = "../overlay-ipc"
